--- a/TS.html
+++ b/TS.html
@@ -47,8 +47,8 @@
     <section class="container-fluid dist-intro">
         <article class="row">
             <div class="col dist-img">
-                <h1 class="glow">Trivandrum</h1>
-                <img src="./assets/images/Ditricts/TV.jpg" alt="" />
+                <h1 class="glow">Thrissur</h1>
+                <img src="./assets/images/Ditricts/TS.jpg" alt="" />
             </div>
         </article>
     </section>
@@ -57,8 +57,8 @@
         <article class="row mb-5">
             <div class="col-6">
                 <div class="image-container">
-                    <a href="https://Thiruvananthapuram.nic.in/">
-                        <img src="./assets/images/Ditricts/map/TV.png" class="w-100" alt="" />
+                    <a href="https://Thrissur.nic.in/">
+                        <img src="./assets/images/Ditricts/map/TS.png" class="w-100" alt="" />
                     </a>
                 </div>
             </div>
@@ -66,13 +66,12 @@
                 <div class="mt-5">
                     <h3>ABOUT DISTRICT&nbsp;</h3>
                     <p>
-                        <strong>Thiruvananthapuram: Capitol of Kerala</strong>
+                        <strong>Thrissur: Festival King</strong>
                     </p>
                     <p class="text-justify" id="tw-target-text" dir="ltr" data-placeholder="Translation">
-                        Thiruvananthapuram District is the southernmost district of the coastal state of Kerala. It is the largest city in Kerala. It came into existence in the year 1957. The headquarters is the city of Thiruvananthapuram (Trivandrum) which is also the capital
-                        city of Kerala. The district has an area of 2,192 square kilometres (846 sq mi) and a population of 3,307,284 (as per the 2011 census), the second-most populous district in Kerala after Malappuram district. It is the densest district
-                        in Kerala with 1,509 inhabitants per square kilometre (3,910/sq mi). It is divided into six taluks: Thiruvananthapuram, Chirayinkeezhu, Neyyattinkara, Nedumangadu, Varkala and Kattakada. The urban bodies in the district are the
-                        Thiruvananthapuram Corporation, Varkala, Neyyattinkara, Attingal and Nedumangad municipalities
+                        Thrissur (also Trichur, Trissur) is a revenue district of Kerala in the central part of that state. Spanning an area of about 3,032 km2, Thrissur district is home to over 10% of Kerala’s population. Thrissur district was formed on July 1, 1949, with the
+                        headquarters at Thrissur City. Thrissur is known as the cultural capital of Kerala, and the land of Poorams. The district is famous for its ancient temples, churches, and mosques. Thrissur Pooram is the most colourful and spectacular
+                        temple festival in Kerala. The district was formed on July 1, 1949.
                     </p>
                 </div>
             </div>
@@ -87,22 +86,22 @@
                     <div class="col-4">
                         <div class="text-center">
                             <h2 class="">
-                                Sree Padmanabhaswamy Temple
+                                Athirappilly Waterfalls
                             </h2>
                             <figure>
-                                <img class="dist-place" src="./assets/images/Ditricts/TV/sree-padmanabhaswamy.jpg" alt="" />
+                                <img class="dist-place" src="./assets/images/Ditricts/TS/athirapally-falls-in.jpg" alt="" />
                             </figure>
                         </div>
                         <div class="wpb_wrapper">
                             <p class="text-justify">
-                                The Sree Padmanabhaswamy Temple is a Hindu temple located in Thiruvananthapuram, the state capital of Kerala, India. It is considered as the richest place of worship in the world.
-                            </p>
+                                Athirappilly Falls, is situated in Athirappilly Panchayat in Chalakudy Taluk of Thrissur District in Kerala, India on the Chalakudy River, which originates from the upper reaches of the Western Ghats at the entrance to the Sholayar ranges. It is the largest
+                                waterfall in Kerala, which stands tall at 80 feet.</p>
                             <p class="place-location">
                                 Location:
                                 <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
-                                <a href="https://www.google.com/maps/place/Sree+Padmanabhaswamy+Temple/@8.4827779,76.9435906,15z/data=!4m5!3m4!1s0x0:0x1d2fedb7213a1ef7!8m2!3d8.4827779!4d76.9435906" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
+                                <a href="https://www.google.com/maps/place/Athirappilly+Water+Falls,+Pariyaram,+Kerala+680724/data=!4m2!3m1!1s0x3b07f923c2abb0d1:0x1e7af75aa13af78?sa=X&ved=2ahUKEwiO__a7vqL1AhVSTGwGHb7YDtAQ8gF6BAg_EAE" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                                     aria-label="Piramadam-Vettimood Road - External site that opens in a new window" title="Piramadam-Vettimood Road - External site that opens in a new window" target="_blank">
-                  West Nada, Fort, East Fort, Pazhavangadi</a>
+                                    Pariyaram, Kerala 680724</a>
                             </p>
                         </div>
                     </div>
@@ -110,24 +109,23 @@
                     <div class="col-4">
                         <div class="text-center">
                             <h2 class="">
-                                Poovar Island
+                                Vadakkunnathan Temple
                             </h2>
                             <figure>
-                                <img class="dist-place" src="./assets/images/Ditricts/TV/Poovar Island.jpg" alt="" />
+                                <img class="dist-place" src="./assets/images/Ditricts/TS/vadakkunnathan-temple.jpg" alt="" />
                             </figure>
                         </div>
                         <div class="wpb_wrapper">
                             <p class="text-justify">
-                                Enveloped in serene Kerala backwaters, flanked by the Arabian Sea on the East and the majestic towering Ghats to the West, opening out to the ocean and a dream golden beach, Poovar Island Resort is a tropical paradise.
+                                Vadakkumnathan Temple is an ancient Hindu temple dedicated to Shiva at city of Thrissur, of Kerala state in India. This temple is a classical example of the architectural style of Kerala and has one monumental tower on each of the four sides in addition
+                                to a kuttambalam.
                             </p>
                             <p class="place-location">
                                 Location:
                                 <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
-                                <a href="https://www.google.com/search?rlz=1C1OPNX_enIN964IN964&sxsrf=AOaemvIWNtI4b2dWsXzFUaPgiH5CAMjYAA:1641652087770&q=Poovar+Island&npsic=0&rflfq=1&rldoc=1&rllag=8307345,77083609,185&tbm=lcl&sa=X&ved=2ahUKEwjOpaTMrqL1AhWJS2wGHQUrB4IQtgN6BAgCEE8&biw=1536&bih=656&dpr=1.25#rlfi=hd:;si:;mv:[[8.323214199999999,77.0879832],[8.305224700000002,77.05848309999999]];tbs:lrf:!1m4!1u3!2m2!3m1!1e1!1m4!1u2!2m2!2m1!1e1!2m1!1e2!2m1!1e3!3sIAE,lf:1,lf_ui:1"
-                                    onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');" aria-label="Napier Street, Fort Kochi - External site that opens in a new window"
-                                    title="Napier Street, Fort Kochi - External site that opens in a new window" target="_blank">Poovar
-                  Island, Trivandrum
-                </a>
+                                <a href="https://www.google.com/maps/place/Sri+Vadakkunnathan+Temple,+Thrissur/@10.524494,76.2145126,15z/data=!4m2!3m1!1s0x0:0x2352a12f19c2777?sa=X&ved=2ahUKEwjq6ufpvqL1AhVqTmwGHYtFC9QQ_BJ6BAgyEAU " onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
+                                    aria-label="Napier Street, Fort Kochi - External site that opens in a new window" title="Napier Street, Fort Kochi - External site that opens in a new window" target="_blank">Swaraj Round N, Kuruppam, Thekkinkadu Maidan
+                                </a>
                             </p>
                         </div>
                     </div>
@@ -135,22 +133,22 @@
                     <div class="col-4">
                         <div class="text-center">
                             <h2 class="">
-                                Thiruvananthapuram Zoo
+                                Kerala Kalamandalam
                             </h2>
                             <figure>
-                                <img class="dist-place" src="./assets/images/Ditricts/TV/Thiruvananthapuram Zoo.jpg" alt="" />
+                                <img class="dist-place" src="./assets/images/Ditricts/TS/kerala-kalamandalam.jpg" alt="" />
                             </figure>
                         </div>
                         <div class="wpb_wrapper">
                             <p class="text-justify">
-                                The Thiruvananthapuram Zoo is located in the city of Thiruvananthapuram, the capital of Kerala, India. It occupies 55 acres of woodland, lakes, and lawns.
+                                Kerala Kalamandalam, deemed to be University of Art and Culture by the Government of India, is a major center for learning Indian performing arts, especially those that developed in the Southern states of India, with the special emphasis on Kerala.
                             </p>
                             <p class="place-location">
                                 Location:
                                 <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
-                                <a href="https://www.google.com/maps/place/Thiruvananthapuram+Zoo/@8.5105939,76.9549377,15z/data=!4m2!3m1!1s0x0:0xa366fab953f1f6ab?sa=X&ved=2ahUKEwjthMSLr6L1AhVOS2wGHU0GCeAQ_BJ6BAgvEAU" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
-                                    aria-label="Kothamangalam - External site that opens in a new window" title="Kothamangalam - External site that opens in a new window" target="_blank">Kanaka Nagar,
-                  Nanthancodu</a>
+                                <a href="https://www.google.com/maps?q=Kerala+Kalamandalam&rlz=1C1OPNX_enIN964IN964&sxsrf=AOaemvK9QlMIrDMVS3EfcND7d4bPsx9Y3A:1641656444656&uact=5&gs_lcp=Cgdnd3Mtd2l6EAMyCAguEIAEELEDMgUIABCABDIFCAAQgAQyBQgAEIAEMgUIABCABDIFCAAQgAQyBQgAEIAEMgUIABCABDIFCAAQgAQyBQgAEIAEOgcIIxDqAhAnSgQIQRgASgQIRhgAUPwFWPwFYOMMaAFwAngAgAGpAYgBqQGSAQMwLjGYAQCgAQGgAQKwAQrAAQE&um=1&ie=UTF-8&sa=X&ved=2ahUKEwjSycnYwqL1AhWSS2wGHUa7BX4Q_AUoAnoECAIQBA"
+                                    onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');" aria-label="Kothamangalam - External site that opens in a new window"
+                                    title="Kothamangalam - External site that opens in a new window" target="_blank">Thrissur - Shoranur Road</a>
                             </p>
                         </div>
                     </div>
@@ -158,23 +156,23 @@
                     <div class="col-4">
                         <div class="text-center">
                             <h2 class="">
-                                Kovalam Beach
+                                Shakthan Thampuran Palace
                             </h2>
                             <figure>
-                                <img class="dist-place" src="./assets/images/Ditricts/TV/Kovalam Beach.jpg" alt="" />
+                                <img class="dist-place" src="./assets/images/Ditricts/TS/shakthan-thampuran-palace.jpg" alt="" />
                             </figure>
                         </div>
                         <div class="wpb_wrapper">
                             <p class="text-justify">
-                                Kovalam is a small coastal town in the southern Indian state of Kerala, south of Thiruvananthapuram. At the southern end of Lighthouse Beach is a striped lighthouse with a viewing platform. Palm-backed beaches also include Hawa Beach and Samudra Beach.
-                                Heading south, Vizhinjam Juma Masjid mosque overlooks the busy fishing harbor. Inland, Sagarika Marine Research Aquarium displays technology used in pearl production.
+                                Shakthan Thampuran Palace is situated in City of Thrissur in Kerala state, India. It is named as Vadakkekara Palace, was reconstructed in Kerala-Dutch style in 1795 by Ramavarma Thampuran of the erstwhile Princely State of Cochin, well as Sakthan Thampuran
+                                is preserved by Archaeological Department.
                             </p>
                             <p class="place-location">
                                 Location:
                                 <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
-                                <a href="https://www.google.com/maps/place/Kovalam,+Kerala/data=!4m2!3m1!1s0x3b05a5090a19ec65:0xb67f315bc0b762ac?sa=X&ved=2ahUKEwijnsfIr6L1AhVUTGwGHYWjDQ4Q8gF6BAgrEAE" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
+                                <a href="https://www.google.com/maps/place/Sakthan+Thampuran+Palace/@10.5311744,76.2158957,15z/data=!4m2!3m1!1s0x0:0x46c359dc4b001a27?sa=X&ved=2ahUKEwj7_6qaw6L1AhXqS2wGHcEnCewQ_BJ6BAgiEAU" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                                     aria-label="Mulavukad, Kochi - External site that opens in a new window" title="Mulavukad, Kochi - External site that opens in a new window" target="_blank">
-                  south of Thiruvananthapuram</a>
+                                    Stadium Rd, Chembukkav</a>
                             </p>
                         </div>
                     </div>
@@ -215,8 +213,8 @@
                         <div class="wpb_wrapper">
                             <p class="text-justify">
                                 <span class="st"><em>Cherai Beach</em> is flaunted as one of the excellent
-                  beach in the Kerala. It’s a picturesque which looks more
-                  beautiful with green groves and paddy field.</span>
+                                    beach in the Kerala. It’s a picturesque which looks more
+                                    beautiful with green groves and paddy field.</span>
                             </p>
                             <p class="place-location">
                                 Location:<img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
@@ -244,7 +242,7 @@
                                 <a href="https://www.google.co.in/maps/dir/''/Jewish+Synagogue,+Synagogue+Ln,+Jew+Town,+Kappalandimukku,+Mattancherry,+Kochi,+Kerala+682002/@9.9574719,76.1893298,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b086d44cadb66e1:0xd8ec499e89febe29!2m2!1d76.2593704!2d9.9574792"
                                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');" aria-label="Mattancherry, Kochi - External site that opens in a new window"
                                     title="Mattancherry, Kochi - External site that opens in a new window" target="_blank">
-                  Mattancherry, Kochi</a>
+                                    Mattancherry, Kochi</a>
                             </p>
                         </div>
                     </div>
@@ -273,7 +271,7 @@
                 </div>
             </div>
             <div class="row set-more mb-3">
-                <a class="more" href="https://www.tripadvisor.in/Attractions-g297637-Activities-Thiruvananthapuram_Trivandrum_Thiruvananthapuram_District_Kerala.html">More</a>
+                <a class="more" href="https://www.tripadvisor.in/Attractions-g735202-Activities-Thrissur_Thrissur_District_Kerala.html">More</a>
             </div>
         </article>
     </section>
