--- a/WA.html
+++ b/WA.html
@@ -47,8 +47,8 @@
     <section class="container-fluid dist-intro">
         <article class="row">
             <div class="col dist-img">
-                <h1 class="glow">Trivandrum</h1>
-                <img src="./assets/images/Ditricts/TV.jpg" alt="" />
+                <h1 class="glow">Wayanad</h1>
+                <img src="./assets/images/Ditricts/WA.jpg" alt="" />
             </div>
         </article>
     </section>
@@ -57,8 +57,8 @@
         <article class="row mb-5">
             <div class="col-6">
                 <div class="image-container">
-                    <a href="https://Thiruvananthapuram.nic.in/">
-                        <img src="./assets/images/Ditricts/map/TV.png" class="w-100" alt="" />
+                    <a href="https://Wayanad.nic.in/">
+                        <img src="./assets/images/Ditricts/map/WA.png" class="w-100" alt="" />
                     </a>
                 </div>
             </div>
@@ -66,13 +66,12 @@
                 <div class="mt-5">
                     <h3>ABOUT DISTRICT&nbsp;</h3>
                     <p>
-                        <strong>Thiruvananthapuram: Capitol of Kerala</strong>
+                        <strong>Wayanad: Land of beauty and history</strong>
                     </p>
                     <p class="text-justify" id="tw-target-text" dir="ltr" data-placeholder="Translation">
-                        Thiruvananthapuram District is the southernmost district of the coastal state of Kerala. It is the largest city in Kerala. It came into existence in the year 1957. The headquarters is the city of Thiruvananthapuram (Trivandrum) which is also the capital
-                        city of Kerala. The district has an area of 2,192 square kilometres (846 sq mi) and a population of 3,307,284 (as per the 2011 census), the second-most populous district in Kerala after Malappuram district. It is the densest district
-                        in Kerala with 1,509 inhabitants per square kilometre (3,910/sq mi). It is divided into six taluks: Thiruvananthapuram, Chirayinkeezhu, Neyyattinkara, Nedumangadu, Varkala and Kattakada. The urban bodies in the district are the
-                        Thiruvananthapuram Corporation, Varkala, Neyyattinkara, Attingal and Nedumangad municipalities
+                        Wayanad district is the 12th District in the state of Kerala in India. Mananthavady, Sulthanbathery, and Vythiri Taluks are all in Wayanad. The name Wayanad comes from Vayal Nadu and it means the land of paddy fields. It is a high, flat land between 700
+                        meters and 2100 meters above sea level. It is in northeaster Kerala, in the Western Ghat mountains. Wayandad is one of the biggest foreign exchange earners in Kerala because it makes money-earning crops like pepper, cardamom, coffee,
+                        tea, and other spices.
                     </p>
                 </div>
             </div>
@@ -87,22 +86,22 @@
                     <div class="col-4">
                         <div class="text-center">
                             <h2 class="">
-                                Sree Padmanabhaswamy Temple
+                                Phantom Rock
                             </h2>
                             <figure>
-                                <img class="dist-place" src="./assets/images/Ditricts/TV/sree-padmanabhaswamy.jpg" alt="" />
+                                <img class="dist-place" src="./assets/images/Ditricts/WA/Phantom Rock.jpg" alt="" />
                             </figure>
                         </div>
                         <div class="wpb_wrapper">
                             <p class="text-justify">
-                                The Sree Padmanabhaswamy Temple is a Hindu temple located in Thiruvananthapuram, the state capital of Kerala, India. It is considered as the richest place of worship in the world.
-                            </p>
+                                The towering Phantom Rock and its surroundings are popular among nature lovers and photographers. The rock formation, which resembles a skull, is a unique example of nature’s artistry. It is a great place to relax and reflect on the beauty of the surrounding
+                                landscape.</p>
                             <p class="place-location">
                                 Location:
                                 <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
-                                <a href="https://www.google.com/maps/place/Sree+Padmanabhaswamy+Temple/@8.4827779,76.9435906,15z/data=!4m5!3m4!1s0x0:0x1d2fedb7213a1ef7!8m2!3d8.4827779!4d76.9435906" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
-                                    aria-label="Piramadam-Vettimood Road - External site that opens in a new window" title="Piramadam-Vettimood Road - External site that opens in a new window" target="_blank">
-                  West Nada, Fort, East Fort, Pazhavangadi</a>
+                                <a href="https://www.google.com/maps/place/Phantom+Rock/@11.636545,76.2024383,17z/data=!3m1!4b1!4m5!3m4!1s0x3ba60ec9078ff989:0xe06fc91fd5bcc6c8!8m2!3d11.636545!4d76.204627" aria-label="Piramadam-Vettimood Road - External site that opens in a new window"
+                                    title="Piramadam-Vettimood Road - External site that opens in a new window" target="_blank">
+                                    Kumbaleri, Kerala</a>
                             </p>
                         </div>
                     </div>
@@ -110,24 +109,23 @@
                     <div class="col-4">
                         <div class="text-center">
                             <h2 class="">
-                                Poovar Island
+                                Tholpetty WildLife Sanctuary
                             </h2>
                             <figure>
-                                <img class="dist-place" src="./assets/images/Ditricts/TV/Poovar Island.jpg" alt="" />
+                                <img class="dist-place" src="./assets/images/Ditricts/WA/Tholpetty WildLife Sanctuary.jpg" alt="" />
                             </figure>
                         </div>
                         <div class="wpb_wrapper">
                             <p class="text-justify">
-                                Enveloped in serene Kerala backwaters, flanked by the Arabian Sea on the East and the majestic towering Ghats to the West, opening out to the ocean and a dream golden beach, Poovar Island Resort is a tropical paradise.
+                                Lying towards the north of the district of Wayanad, this region harbours a rich diversity of flora. Open to wildlife jeep safari twice a day, you are bound to spot various animals and bird species in their natural habitat during the 1.5-2 hour journey.
+                                A lake where animals come down for a drink is a major attraction here.
                             </p>
                             <p class="place-location">
                                 Location:
                                 <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
-                                <a href="https://www.google.com/search?rlz=1C1OPNX_enIN964IN964&sxsrf=AOaemvIWNtI4b2dWsXzFUaPgiH5CAMjYAA:1641652087770&q=Poovar+Island&npsic=0&rflfq=1&rldoc=1&rllag=8307345,77083609,185&tbm=lcl&sa=X&ved=2ahUKEwjOpaTMrqL1AhWJS2wGHQUrB4IQtgN6BAgCEE8&biw=1536&bih=656&dpr=1.25#rlfi=hd:;si:;mv:[[8.323214199999999,77.0879832],[8.305224700000002,77.05848309999999]];tbs:lrf:!1m4!1u3!2m2!3m1!1e1!1m4!1u2!2m2!2m1!1e1!2m1!1e2!2m1!1e3!3sIAE,lf:1,lf_ui:1"
-                                    onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');" aria-label="Napier Street, Fort Kochi - External site that opens in a new window"
-                                    title="Napier Street, Fort Kochi - External site that opens in a new window" target="_blank">Poovar
-                  Island, Trivandrum
-                </a>
+                                <a href="https://www.google.com/maps/search/Tholpetty+WildLife+Sanctuary/@11.8168073,76.0697666,11z/data=!3m1!4b1" aria-label="Napier Street, Fort Kochi - External site that opens in a new window" title="Napier Street, Fort Kochi - External site that opens in a new window"
+                                    target="_blank">Tholpetty, Kerala 670646
+                                </a>
                             </p>
                         </div>
                     </div>
@@ -135,22 +133,22 @@
                     <div class="col-4">
                         <div class="text-center">
                             <h2 class="">
-                                Thiruvananthapuram Zoo
+                                Banasura Sagar Dam
                             </h2>
                             <figure>
-                                <img class="dist-place" src="./assets/images/Ditricts/TV/Thiruvananthapuram Zoo.jpg" alt="" />
+                                <img class="dist-place" src="./assets/images/Ditricts/WA/bhanasura.jpg" alt="" />
                             </figure>
                         </div>
                         <div class="wpb_wrapper">
                             <p class="text-justify">
-                                The Thiruvananthapuram Zoo is located in the city of Thiruvananthapuram, the capital of Kerala, India. It occupies 55 acres of woodland, lakes, and lawns.
+                                Wayanad is home to India’s largest earthen dam, the Banasura Sagar. The dam, which was constructed in 1979, is built across the Karamanathodu tributary of the Kabani River. It is named after the Asura king Banasura, son of Mahabali, who is said to have
+                                observed a severe penance in the surrounding hills
                             </p>
                             <p class="place-location">
                                 Location:
                                 <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
-                                <a href="https://www.google.com/maps/place/Thiruvananthapuram+Zoo/@8.5105939,76.9549377,15z/data=!4m2!3m1!1s0x0:0xa366fab953f1f6ab?sa=X&ved=2ahUKEwjthMSLr6L1AhVOS2wGHU0GCeAQ_BJ6BAgvEAU" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
-                                    aria-label="Kothamangalam - External site that opens in a new window" title="Kothamangalam - External site that opens in a new window" target="_blank">Kanaka Nagar,
-                  Nanthancodu</a>
+                                <a href="https://www.google.com/maps/place/Banasura+Sagar+Dam,+Padinjarathara,+Kerala+673575/@11.67,75.9555893,17z/data=!3m1!4b1!4m5!3m4!1s0x3ba676fa0af8b59f:0x337d2cd14699bb74!8m2!3d11.67!4d75.957778" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
+                                    aria-label="Kothamangalam - External site that opens in a new window" title="Kothamangalam - External site that opens in a new window" target="_blank">Padinjarathara, Kerala 673575</a>
                             </p>
                         </div>
                     </div>
@@ -158,23 +156,22 @@
                     <div class="col-4">
                         <div class="text-center">
                             <h2 class="">
-                                Kovalam Beach
+                                Edakkal Caves
                             </h2>
                             <figure>
-                                <img class="dist-place" src="./assets/images/Ditricts/TV/Kovalam Beach.jpg" alt="" />
+                                <img class="dist-place" src="./assets/images/Ditricts/WA/Edakkal Caves.jpg" alt="" />
                             </figure>
                         </div>
                         <div class="wpb_wrapper">
                             <p class="text-justify">
-                                Kovalam is a small coastal town in the southern Indian state of Kerala, south of Thiruvananthapuram. At the southern end of Lighthouse Beach is a striped lighthouse with a viewing platform. Palm-backed beaches also include Hawa Beach and Samudra Beach.
-                                Heading south, Vizhinjam Juma Masjid mosque overlooks the busy fishing harbor. Inland, Sagarika Marine Research Aquarium displays technology used in pearl production.
+                                Located at about 1200 ft above the sea level, the Edakkal Caves are among the oldest human settlements ever discovered. Inside the caves are pictorial drawings and engravings that indicate the presence of ancient human settlements in the region.
                             </p>
                             <p class="place-location">
                                 Location:
                                 <img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
-                                <a href="https://www.google.com/maps/place/Kovalam,+Kerala/data=!4m2!3m1!1s0x3b05a5090a19ec65:0xb67f315bc0b762ac?sa=X&ved=2ahUKEwijnsfIr6L1AhVUTGwGHYWjDQ4Q8gF6BAgrEAE" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
+                                <a href="https://www.google.com/maps/place/Edakkal+Caves/@11.6268407,76.2320803,17z/data=!3m1!4b1!4m5!3m4!1s0x3ba60f22c50570e3:0xdb71297693a9e0df!8m2!3d11.6268407!4d76.234269" onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');"
                                     aria-label="Mulavukad, Kochi - External site that opens in a new window" title="Mulavukad, Kochi - External site that opens in a new window" target="_blank">
-                  south of Thiruvananthapuram</a>
+                                    Nenmeni, Kerala 673595</a>
                             </p>
                         </div>
                     </div>
@@ -215,8 +212,8 @@
                         <div class="wpb_wrapper">
                             <p class="text-justify">
                                 <span class="st"><em>Cherai Beach</em> is flaunted as one of the excellent
-                  beach in the Kerala. It’s a picturesque which looks more
-                  beautiful with green groves and paddy field.</span>
+                                    beach in the Kerala. It’s a picturesque which looks more
+                                    beautiful with green groves and paddy field.</span>
                             </p>
                             <p class="place-location">
                                 Location:<img loading="lazy" class="alignnone  wp-image-25056" src="./assets/images/loc.png" alt="map" width="21" height="21" sizes="(max-width: 21px) 100vw, 21px" />
@@ -244,7 +241,7 @@
                                 <a href="https://www.google.co.in/maps/dir/''/Jewish+Synagogue,+Synagogue+Ln,+Jew+Town,+Kappalandimukku,+Mattancherry,+Kochi,+Kerala+682002/@9.9574719,76.1893298,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3b086d44cadb66e1:0xd8ec499e89febe29!2m2!1d76.2593704!2d9.9574792"
                                     onclick="return confirm('You are being redirected to an external website. Please note that Ernakulam District Website cannot be held responsible for external websites content &amp; privacy policies.');" aria-label="Mattancherry, Kochi - External site that opens in a new window"
                                     title="Mattancherry, Kochi - External site that opens in a new window" target="_blank">
-                  Mattancherry, Kochi</a>
+                                    Mattancherry, Kochi</a>
                             </p>
                         </div>
                     </div>
@@ -273,7 +270,7 @@
                 </div>
             </div>
             <div class="row set-more mb-3">
-                <a class="more" href="https://www.tripadvisor.in/Attractions-g297637-Activities-Thiruvananthapuram_Trivandrum_Thiruvananthapuram_District_Kerala.html">More</a>
+                <a class="more" href="https://wayanad.gov.in/en/tourist-places/">More</a>
             </div>
         </article>
     </section>
